# Na_Polke_Startup_MIPT

./: .gitignore  data.json
RAG/: .local.env  main.py  pyproject.toml
RAG/src/api/v1/: router.py  tasks.py
RAG/src/evaluation/: faithfullness.py
RAG/src/ingestion/: node_parser.py  postprocessor.py  processor.py  prompt_constructor.py
RAG/src/managers/: index_chroma_manager.py  query_manager.py  retrieval_manager.py  storage_manager.py
RAG/src/services/: chroma_manager.py
RAG/src/settings/: config.py  helpers.py  llamaindex_settings.py
RAG/src/settings/prompts/: system_prompt.yml
agents/: Dockerfile  README_RAG_AGENT.md  crew.py  docker-compose.yaml  docker-compose.yml  example_rag_usage.py  pyproject.toml  test_connection.py
agents/src/api/v1/: router.py  schemas.py
agents/src/config/: agents.yaml  tasks.yaml
agents/src/crews/: product_analysis_crew.py
agents/src/crews/config/: agents.yaml  new_agents.yaml  rec_tasks.yaml  tasks.yaml
agents/src/data/: incibeauty_ingredients_full_most.json
agents/src/settings/: config.py
agents/src/tools/: inci_tool.py  rag_tool.py  sonar_general_search_tool.py  sonar_tool.py
bot/: Dockerfile  bot.py  config.py  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
bot/src/: start_router.py  states.py  utils.py
bot/src/keyboards/: keyboard.py
bot/src/parse_barcode/: router.py
bot/src/services/: translate_service.py
bot/src/translator/: router.py
data/inci/: incibeauty_ingredients_full_1.json  incibeauty_ingredients_full_a.json  incibeauty_ingredients_full_b.json  incibeauty_ingredients_full_c.json  incibeauty_ingredients_full_d.json  incibeauty_ingredients_full_e.json  incibeauty_ingredients_full_f.json  incibeauty_ingredients_full_g.json  incibeauty_ingredients_full_h.json  incibeauty_ingredients_full_i.json  incibeauty_ingredients_full_j.json  incibeauty_ingredients_full_k.json  incibeauty_ingredients_full_l.json  incibeauty_ingredients_full_m.json  incibeauty_ingredients_full_n.json  incibeauty_ingredients_full_o.json  incibeauty_ingredients_full_p.json  incibeauty_ingredients_full_q.json  incibeauty_ingredients_full_r.json  incibeauty_ingredients_full_s.json  incibeauty_ingredients_full_t.json  incibeauty_ingredients_full_u.json  incibeauty_ingredients_full_v.json  incibeauty_ingredients_full_w.json  incibeauty_ingredients_full_x.json  incibeauty_ingredients_full_y.json  incibeauty_ingredients_full_z.json  merge.py  parse.py  parse_old.py  table.html
embed/: docker-compose.yml
evals/: .eval.env  adapt.py  config.py  eval_dataset_inci.jsonl  eval_dataset_nl_queries.jsonl  evaluate.py  experiment_b.py  experiments.py  experiments_backup.py  generate_dataset.py  generate_h2.py  h1_results.json  inci_judge_cache.json  judge.py
rag/: Dockerfile  docker-compose.yml  main.py  pyproject.toml
rag/src/api/v1/: schemas.py
rag/src/evaluation/: baseline_eval.py  retrievers_metrics.py
rag/src/ingestion/: prompt_constructor.py
rag/src/managers/: retrieval_manager.py
rag/src/services/: chroma_manager.py
rag/src/settings/prompts/: system_prompt.yml
reranker/: Makefile  docker-compose.yml
