[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "crew-agents"
version = "0.1.0"
description = "Crew agents application"
requires-python = ">=3.12"

dependencies = [
    "aiofiles",
    "aiogram",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "annotated-doc",
    "annotated-types",
    "anyio",
    "appdirs",
    "attrs",
    "backoff",
    "bcrypt",
    "beautifulsoup4",
    "build",
    "cachetools",
    "certifi",
    "cffi",
    "cfgv",
    "charset-normalizer",
    "chromadb",
    "click",
    "colorama",
    "coloredlogs",
    "crewai",
    "crewai-tools",
    "cryptography",
    "defusedxml",
    "deprecation",
    "diskcache",
    "distlib",
    "distro",
    "docker",
    "docstring_parser",
    "durationpy",
    "et_xmlfile",
    "fastapi",
    "filelock",
    "flatbuffers",
    "frozenlist",
    "fsspec",
    "google-auth",
    "googleapis-common-protos",
    "grpcio",
    "h11",
    "hf-xet",
    "httpcore",
    "httptools",
    "httpx",
    "httpx-sse",
    "huggingface_hub",
    "humanfriendly",
    "identify",
    "idna",
    "importlib_metadata",
    "importlib_resources",
    "instructor",
    "Jinja2",
    "jiter",
    "json5",
    "json_repair",
    "jsonref",
    "jsonschema",
    "jsonschema-specifications",
    "kubernetes",
    "lance-namespace",
    "lance-namespace-urllib3-client",
    "lancedb",
    "lxml",
    "litellm",
    "magic-filter",
    "markdown-it-py",
    "MarkupSafe",
    "mcp",
    "mdurl",
    "mmh3",
    "mpmath",
    "multidict",
    "nodeenv",
    "numpy",
    "oauthlib",
    "onnxruntime",
    "openai",
    "opencv-python",
    "openpyxl",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "orjson",
    "overrides",
    "packaging",
    "pdfminer.six",
    "pdfplumber",
    "pillow",
    "platformdirs",
    "portalocker",
    "posthog",
    "pre_commit",
    "propcache",
    "protobuf",
    "pyarrow",
    "pyasn1",
    "pyasn1_modules",
    "pybase64",
    "pycparser",
    "pydantic",
    "pydantic-settings",
    "pydantic_core",
    "Pygments",
    "PyJWT",
    "PyMuPDF",
    "pypdfium2",
    "PyPika",
    "pyproject_hooks",
    "pyreadline3",
    "python-dateutil",
    "python-docx",
    "python-dotenv",
    "python-multipart",
    "pytube",
    "PyYAML",
    "pyzbar",
    "referencing",
    "regex",
    "requests",
    "requests-oauthlib",
    "rich",
    "rpds-py",
    "rsa",
    "shellingham",
    "six",
    "sniffio",
    "soupsieve",
    "sse-starlette",
    "starlette",
    "sympy",
    "tenacity",
    "tiktoken",
    "tokenizers",
    "tomli",
    "tomli_w",
    "tqdm",
    "ty",
    "typer",
    "typer-slim",
    "typing-inspection",
    "typing_extensions",
    "urllib3",
    "uv",
    "uvicorn",
    "virtualenv",
    "watchfiles",
    "websocket-client",
    "websockets",
    "yarl",
    "youtube-transcript-api",
    "zipp"
]