[project]
name = "rag"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "truststore",
    "aiofiles",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "aiosqlite",
    "annotated-types",
    "anyio",
    "attrs",
    "backoff",
    "banks",
    "bcrypt",
    "beautifulsoup4",
    "bm25s",
    "build",
    "cachetools",
    "certifi",
    "cffi",
    "charset-normalizer",
    "chromadb",
    "click",
    "colorama",
    "coloredlogs",
    "cryptography",
    "dataclasses-json",
    "Deprecated",
    "dirtyjson",
    "distro",
    "docx2txt",
    "durationpy",
    "fastapi",
    "filelock",
    "filetype",
    "flatbuffers",
    "frozenlist",
    "fsspec",
    "google-auth",
    "googleapis-common-protos",
    "greenlet",
    "griffe",
    "grpcio",
    "h11",
    "httpcore",
    "httptools",
    "httpx",
    "huggingface-hub",
    "humanfriendly",
    "idna",
    "itsdangerous",
    "importlib_metadata",
    "importlib_resources",
    "Jinja2",
    "jiter",
    "joblib",
    "jsonschema",
    "jsonschema-specifications",
    "kubernetes",
    "llama-cloud",
    "llama-cloud-services",
    "llama-index",
    "llama-index-agent-openai",
    "llama-index-cli",
    "llama-index-core",
    "llama-index-embeddings-huggingface",
    "llama-index-llms-dashscope",
    "llama-index-embeddings-openai",
    "llama-index-indices-managed-llama-cloud",
    "llama-index-instrumentation",
    "llama-index-llms-openai",
    "llama-index-llms-openai-like",
    "llama-index-llms-openllm",
    "llama-index-multi-modal-llms-openai",
    "llama-index-program-openai",
    "llama-index-question-gen-openai",
    "llama-index-readers-file",
    "llama-index-readers-llama-parse",
    "llama-index-retrievers-bm25",
    "llama-index-vector-stores-chroma",
    "llama-index-workflows",
    "llama-parse",
    "lxml",
    "markdown-it-py",
    "MarkupSafe",
    "marshmallow",
    "mdurl",
    "mmh3",
    "mpmath",
    "multidict",
    "mypy_extensions",
    "nltk",
    "numpy",
    "oauthlib",
    "onnxruntime",
    "openai",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "orjson",
    "overrides",
    "packaging",
    "pandas",
    "pillow",
    "platformdirs",
    "posthog",
    "propcache",
    "protobuf",
    "pyasn1",
    "pyasn1_modules",
    "pybase64",
    "pycparser",
    "pydantic",
    "pydantic-settings",
    "pydantic_core",
    "Pygments",
    "pypdf",
    "PyPika",
    "pyproject_hooks",
    "pyreadline3",
    "pyspnego",
    "PyStemmer",
    "python-dateutil",
    "python-dotenv",
    "python-multipart",
    "python-pptx",
    "python3-saml",
    "pytz",
    "PyYAML",
    "referencing",
    "regex",
    "requests",
    "requests-oauthlib",
    "rich",
    "rpds-py",
    "rsa",
    "safetensors",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "striprtf",
    "shellingham",
    "six",
    "sniffio",
    "soupsieve",
    "SQLAlchemy",
    "sspilib",
    "starlette",
    "striprtf",
    "sympy",
    "tenacity",
    "threadpoolctl",
    "tiktoken",
    "tokenizers",
    "torch",
    "tqdm",
    "transformers",
    "typer",
    "typing-inspect",
    "typing-inspection",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "uvicorn",
    "watchfiles",
    "websocket-client",
    "websockets",
    "wrapt",
    "xlsxwriter",
    "yarl",
    "zipp",
    "aioboto3",
    "aiohttp",
    "botocore",
    "boto3",
    "llama-index-vector-stores-postgres",
    "psycopg2-binary",
    "sqlalchemy",
    "pgvector",
    "asyncpg",
    "llama-index-embeddings-text-embeddings-inference",
    "llama-index-postprocessor-tei-rerank"
]